--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -15,6 +15,7 @@
     <string name="tvBirthdate">تاريخ الميلاد :</string>
     <string name="tvCountry">الدولة :</string>
     <string name="tvCompletedLevels">المراحل المكتملة :</string>
+    <string name="tvAnswerQ">الأسئلة المجابة :</string>
     <string name="tvCorrectAnswer">الاجابات الصحيحة :</string>
     <string name="tvWrongAnswer">الاجابات الخاطئة :</string>
     <string name="tvProfileTitle">الصفحة الشخصية</string>
@@ -22,10 +23,22 @@
     <string name="EmailHint">أدخل بريدك الإلكتروني</string>
     <string name="rbMale">ذكر</string>
     <string name="rbFemale">أنثى</string>
+    <string name="tvNextQ">التالي</string>
 
     <string name="tvLevelNumber">المرحلة</string>
     <string name="etCompleteAnswerHint">اكتب الجواب هنا</string>
     <string name="btnSure">أنا متاكد</string>
+    <string name="tvCorrectAnswerDialog">إجابة صحيحة</string>
+    <string name="tvWrongAnswerDialog">إجابة خاطئة</string>
+
+    <string name="skipTitleDialog">تخطي السؤال ؟</string>
+    <string name="skipMessageDialog">سيتم خصم 3 نقاط للانتقال إلى السؤال الثاني عند النقر فوق نعم.</string>
+
+    <string name="replayTitleDialog">اعادة اللعب ؟</string>
+    <string name="replayMessageDialog">سيتم إعادة جميع المستويات من البداية ، وستخسر نقاطك عند الضغط على نعم؟.</string>
+
+    <string name="positiveButtonDialog">نعم</string>
+    <string name="negativeButtonDialog">لا</string>
 
 
     <string-array name="country">
